--- a/starter/src/app/core/header/header.component.html
+++ b/starter/src/app/core/header/header.component.html
@@ -34,7 +34,7 @@
       <mat-icon>notifications_off</mat-icon>
       Disable notifications
     </button>
-    <button mat-menu-item>
+    <button (click)="signOut()" mat-menu-item>
       <mat-icon>exit_to_app</mat-icon>
       Sign Out
     </button>
