--- a/starter/src/app/session/signin/signin.component.html
+++ b/starter/src/app/session/signin/signin.component.html
@@ -4,6 +4,7 @@
       <mat-card>
         <mat-card-content>
           <form [formGroup]="form" (ngSubmit)="onSubmit()">
+            <div *ngIf="invalidLogin" class="alert alert-danger">Invalid username and/or password.</div>
             <div class="text-xs-center pb-1">
               <img src="assets/images/logo-dark.svg" alt=""/>
               <p class="mat-text-muted">Sign in with your app id to continue.</p>
