--- a/starter/src/app/session/signup/signup.component.html
+++ b/starter/src/app/session/signup/signup.component.html
@@ -6,9 +6,25 @@
           <form [formGroup]="form" (ngSubmit)="onSubmit()">
             <div class="text-xs-center pb-1">
               <img src="assets/images/logo-dark.svg" alt=""/>
-              <p class="mat-text-muted">Create an app id to continue.</p>
+              <p class="mat-text-muted">Créer votre compte pour continuer.</p>
             </div>
             <div fxLayout="column"  fxLayoutAlign="space-around">
+              <div class="mb-1">
+                <mat-form-field style="width: 100%">
+                  <input matInput placeholder="First name" type="text" [formControl]="form.controls['fname']">
+                </mat-form-field>
+                <small *ngIf="form.controls['fname'].hasError('required') && form.controls['fname'].touched" class="mat-text-warn">You must include a first name.</small>
+                <small *ngIf="form.controls['fname'].hasError('minlength') && form.controls['fname'].touched" class="mat-text-warn">Your first name must be at least 5 characters long.</small>
+                <small *ngIf="form.controls['fname'].hasError('maxlength') && form.controls['fname'].touched" class="mat-text-warn">Your first name cannot exceed 10 characters.</small>
+              </div>
+              <div class="mb-1">
+                <mat-form-field style="width: 100%">
+                  <input matInput placeholder="Last name" [formControl]="form.controls['lname']">
+                </mat-form-field>
+                <small *ngIf="form.controls['lname'].hasError('required') && form.controls['lname'].touched" class="mat-text-warn">You must include a last name.</small>
+                <small *ngIf="form.controls['lname'].hasError('minlength') && form.controls['lname'].touched" class="mat-text-warn">Your last name must be at least 5 characters long.</small>
+                <small *ngIf="form.controls['lname'].hasError('maxlength') && form.controls['lname'].touched" class="mat-text-warn">Your last name cannot exceed 10 characters.</small>
+              </div>
               <div class="pb-1">
                 <mat-form-field style="width: 100%">
                   <input matInput placeholder="Email address" type="email" [formControl]="form.controls['email']">
@@ -29,9 +45,44 @@
                 <small *ngIf="form.controls['confirmPassword'].hasError('required') && form.controls['confirmPassword'].touched" class="mat-text-warn">You must include confirm password.</small>
                 <small *ngIf="form.controls['confirmPassword'].errors?.equalTo" class="mat-text-warn">Passwords do not math.</small>
               </div>
-              <div class="pb-1">
-                <mat-checkbox>I have read and agree to the terms of service.</mat-checkbox>
+              <div class="mb-1">
+                <mat-form-field style="width: 100%">
+                  <input matInput placeholder="Date de Naissance" [formControl]="form.controls['date']" type="date">
+                </mat-form-field>
+                <!-- <mat-form-field>
+                  <input matInput [matDatepicker]="picker" placeholder="Date de Naissance" [formControl]="form.controls['date']" type="date">
+                  <mat-datepicker-toggle matSuffix [for]="picker">
+                    <mat-icon matDatepickerToggleIcon>keyboard_arrow_down</mat-icon>
+                  </mat-datepicker-toggle>
+                  <mat-datepicker #picker></mat-datepicker>
+                </mat-form-field> -->
+                <small *ngIf="form.controls['date'].hasError('required') && form.controls['date'].touched" class="mat-text-warn">You must include a date.</small>
+                <small *ngIf="form.controls['date'].errors?.date && form.controls['date'].touched" class="mat-text-warn">You must include a valid date.</small>
               </div>
+
+              <div class="center mb-1">
+                <mat-radio-group [formControl]="form.controls['gender']">
+                 <span class="float-left">
+                  <mat-radio-button value="male">Male</mat-radio-button>
+                 </span> 
+                 <span class="float-right">
+                    <mat-radio-button value="female">Female</mat-radio-button>
+                 </span>
+                </mat-radio-group>
+                <small *ngIf="!form.controls['gender'].valid && form.controls['gender'].touched" class="mat-text-warn">You must select a gender.</small>
+              </div>
+
+              <div class="mb-1">
+                <mat-form-field style="width: 100%">
+                  <mat-select [(value)]="selected" placeholder="Spécialité" [formControl]="form.controls['specialty']">
+                    <mat-option></mat-option>
+                    <mat-option value="chirigien">Chirigien</mat-option>
+                    <mat-option value="pediatrie">Pediatrie</mat-option>
+                    <mat-option value="radiology">Radiology</mat-option>
+                  </mat-select>
+                </mat-form-field>
+                <small *ngIf="form.controls['specialty'].hasError('required') && form.controls['specialty'].touched" class="mat-text-warn">You must include a specialty.</small>
+              </div><br>
               <button mat-raised-button color="primary" class="btn-block" type="submit" [disabled]="!form.valid">Create your account</button>
             </div>
             <div class="pt-1 pb-1 text-xs-center">
