--- a/starter/src/app/core/header/header.component.html
+++ b/starter/src/app/core/header/header.component.html
@@ -3,37 +3,37 @@
     <mat-icon>menu</mat-icon>
   </button>
   <div class="branding">
-    <div class="logo"></div>
+    <!-- <div class="logo"></div> -->
   </div>
   <div class="search-bar" fxFlex>
-    <form class="search-form" [ngStyle.xs]="{display: 'none'}">
+    <!-- <form class="search-form" [ngStyle.xs]="{display: 'none'}">
       <mat-icon>search</mat-icon>
       <input type="text" placeholder="Search" autofocus="true" />
-    </form>
+    </form> -->
   </div>
-  <button (click)="fullScreenToggle()" mat-icon-button>
+  <!-- <button (click)="fullScreenToggle()" mat-icon-button>
     <mat-icon>fullscreen</mat-icon>
-  </button>
-  <button (click)="toggleNotificationSidenav.emit()" mat-icon-button class="ml-xs overflow-visible">
+  </button> -->
+  <!-- <button (click)="toggleNotificationSidenav.emit()" mat-icon-button class="ml-xs overflow-visible">
     <mat-icon>notifications</mat-icon>
     <span class="notification-label">5</span>
-  </button>
+  </button> -->
   <button [matMenuTriggerFor]="user" mat-icon-button class="ml-xs">
     <mat-icon>person</mat-icon>
   </button>
   <mat-menu #user="matMenu" x-position="before">
-    <button mat-menu-item>
+    <!-- <button mat-menu-item>
       <mat-icon>settings</mat-icon>
       Settings
-    </button>
-    <button mat-menu-item>
+    </button> -->
+    <button [routerLink]="['/medcin/user-profile/'+1]" mat-menu-item>
       <mat-icon>account_box</mat-icon>
       Profile
     </button>
-    <button mat-menu-item>
+    <!-- <button mat-menu-item>
       <mat-icon>notifications_off</mat-icon>
       Disable notifications
-    </button>
+    </button> -->
     <button (click)="signOut()" mat-menu-item>
       <mat-icon>exit_to_app</mat-icon>
       Sign Out
