--- a/starter/src/app/patient/components/patient-item/patient-item.component.html
+++ b/starter/src/app/patient/components/patient-item/patient-item.component.html
@@ -1,3 +1,119 @@
-<p>
-  patient-item works!
-</p>
+<div class="wrapper">
+  <div fxLayout="row" fxLayoutWrap="wrap">
+    <div fxFlex.gt-sm="40" fxFlex="100">
+      <mat-card>
+        <mat-card-content>
+          <div fxLayout="row">
+            <div fxFlex="60">
+              <h1 class="ma-0"> {{patient.firstName}}
+                <b>{{patient.lastName}}</b>
+              </h1>
+              <br>
+              <p><b>Sexe: </b>{{patient.sexe}}</p>
+              <p><b>Age: </b>{{ patientService.getDate(patient.dateDeNaissance) }}</p>
+              <p>
+                <b>Date de la greffe: </b>
+                 {{patient.dateDeGreffe | date:'yyyy-MM-dd HH:mm'}}
+              </p>
+               
+              <button mat-raised-button color="primary" class="ml-xs mr-xs">MAJ</button>
+            </div>
+            <div fxFlex="40">
+              <span fxFlex></span>
+              <div class="rouge">
+                {{ patientService.getJour(patient.dateDeGreffe) }}
+              </div>
+            </div>
+          </div>
+        </mat-card-content>
+        <hr>
+        <mat-card-content>
+          <div fxLayout="row" class="text-xs-center">
+            <div fxFlex="33">
+              <h1 class="ma-0">
+                <b>Temp=</b>
+              </h1>      
+            </div>
+            <div fxFlex="33">
+              <h1 class="ma-0">
+                <b>FC=</b>
+              </h1>
+            </div>
+            <div fxFlex="33">
+              <h1 class="ma-0">
+                <b>FR=</b>
+              </h1>             
+            </div>
+          </div>
+          <div fxLayout="row" class="text-xs-center">
+            <div fxFlex="33">
+              <h1 class="ma-0">
+                <b>PA=</b>
+              </h1>
+            </div>
+            <div fxFlex="33">
+              <h1 class="ma-0">
+                <b>SaO2=</b>
+              </h1>
+            </div>
+            <div fxFlex="33">
+              <button mat-raised-button color="primary"> Historique </button>
+            </div>
+          </div>
+        </mat-card-content>
+        <hr>
+      </mat-card>
+    </div>
+    <div fxFlex.gt-sm="60" fxFlex="100">
+      <div fxLayout="column">
+        <mat-card>
+          <mat-tab-group>
+            <mat-tab>
+              <ng-template matTabLabel>Chat</ng-template>
+              <mat-tab-group (selectedTabChange)="tabChanged($event)">
+                <mat-tab>
+                  <ng-template matTabLabel>Clinique</ng-template>
+                  <app-chat [messages]="patient.cliniques" [patientId]="patientId" [index]="index"></app-chat>
+                </mat-tab>
+                <mat-tab>
+                  <ng-template matTabLabel>Instruction</ng-template>
+                  <app-chat [messages]="patient.instructions" [patientId]="patientId" [index]="index"></app-chat>
+                </mat-tab>
+              </mat-tab-group>
+            </mat-tab>
+            <mat-tab>
+              <ng-template matTabLabel>Bio</ng-template>
+              <mat-tab-group>
+                <mat-tab>
+                  <ng-template matTabLabel>Chimie</ng-template>
+                  <mat-card-content>
+                    <app-bilans [bilans]="patient.bilans"></app-bilans>
+                  </mat-card-content>
+                </mat-tab>
+                <mat-tab>
+                  <ng-template matTabLabel>Hémathologie</ng-template>
+                
+                </mat-tab>
+              </mat-tab-group>
+            </mat-tab>
+            <mat-tab>
+              <mat-card-content>
+                <ng-template matTabLabel>Photos</ng-template>
+                <mat-grid-list cols="3">
+                  <mat-grid-tile *ngFor="let id of images" rowHeight="4:3">
+                    <img src="https://source.unsplash.com/600x600?{{ id }}" alt="Card image cap" />
+                    <mat-grid-tile-footer>
+                      <h3 matLine>{{ id }}</h3>
+                      <span matLine>Gallery image: {{ id }}</span>
+                      <mat-icon>favorite</mat-icon>
+                    </mat-grid-tile-footer>
+                  </mat-grid-tile>
+                </mat-grid-list>
+              </mat-card-content>
+            </mat-tab>
+          </mat-tab-group>
+        </mat-card>
+      </div>
+    </div>
+  </div>
+</div>
