--- a/starter/src/assets/styles/app.scss
+++ b/starter/src/assets/styles/app.scss
@@ -10,3 +10,4 @@
 @import "scss/utilities/utilities";
 
 @import "~ng-pick-datetime/assets/style/picker.min.css";
+// @import "https://fonts.googleapis.com/icon?family=Material+Icons";
