--- a/starter/src/app/medcin/medcins/medcins.component.html
+++ b/starter/src/app/medcin/medcins/medcins.component.html
@@ -23,7 +23,7 @@
 
           <ng-container matColumnDef="dateDeNaissance">
             <mat-header-cell *matHeaderCellDef> Date de Naissance </mat-header-cell>
-            <mat-cell *matCellDef="let medcin"> {{medcin.dateDeNaissance}} </mat-cell>
+            <mat-cell *matCellDef="let medcin"> {{medcin.dateDeNaissance | date: 'yyyy-MM-dd HH:mm'}} </mat-cell>
           </ng-container>
 
           <ng-container matColumnDef="sexe">
