--- a/starter/src/app/patient/components/bilans/bilans.component.html
+++ b/starter/src/app/patient/components/bilans/bilans.component.html
@@ -1,5 +1,9 @@
 <mat-card class="shadow-none">
   <mat-card-content>
+    <div>
+      <span fxFlex></span>
+      <button mat-raised-button color="primary" (click)="ajouterBilan()"> <mat-icon>add</mat-icon>NEW </button>
+    </div>
       <mat-table #table [dataSource]="dataSource">
 
         <ng-container matColumnDef="date">
