--- a/starter/src/app/medcin/edit-medcin/edit-medcin.component.html
+++ b/starter/src/app/medcin/edit-medcin/edit-medcin.component.html
@@ -1,12 +1,12 @@
 <mat-card>
   <mat-card-title>Modification d'un Medcin</mat-card-title>
   <mat-card-subtitle>Saisir les infos:</mat-card-subtitle>
-  <form [formGroup]="form">
+  <form [formGroup]="form" (ngSubmit)="onSubmit()">
     <mat-card-content>
-      <div fxLayout="row" class=" row justify-content-center" fxLayoutWrap="wrap">
+      <div fxLayout="row" class="row justify-content-center" fxLayoutWrap="wrap">
         <div class="mb-1 col-4">
           <mat-form-field style="width: 100%">
-            <input matInput placeholder="First name" [formControl]="form.controls['fname']" [(ngModel)]="medcin.firstName">
+            <input matInput placeholder="First name" [formControl]="form.controls['fname']">
           </mat-form-field>
           <small *ngIf="form.controls['fname'].hasError('required') && form.controls['fname'].touched" class="mat-text-warn">You must include a first name.</small>
           <small *ngIf="form.controls['fname'].hasError('minlength') && form.controls['fname'].touched" class="mat-text-warn">Your first name must be at least 5 characters long.</small>
@@ -15,10 +15,10 @@
         <div class="col-6"></div>
       </div>
 
-      <div fxLayout="row" class=" row justify-content-center" fxLayoutWrap="wrap">
+      <div fxLayout="row" class="row justify-content-center" fxLayoutWrap="wrap">
         <div class="mb-1 col-4">
           <mat-form-field style="width: 100%">
-            <input matInput placeholder="Last name" [(ngModel)]="medcin.lastName" [formControl]="form.controls['lname']">
+            <input matInput placeholder="Last name" [formControl]="form.controls['lname']">
           </mat-form-field>
           <small *ngIf="form.controls['lname'].hasError('required') && form.controls['lname'].touched" class="mat-text-warn">You must include a last name.</small>
           <small *ngIf="form.controls['lname'].hasError('minlength') && form.controls['lname'].touched" class="mat-text-warn">Your last name must be at least 5 characters long.</small>
@@ -27,10 +27,10 @@
         <div class="col-6"></div>
       </div>
 
-      <div fxLayout="row" class=" row justify-content-center" fxLayoutWrap="wrap">
+      <div fxLayout="row" class="row justify-content-center" fxLayoutWrap="wrap">
         <div class="mb-1 col-4">
           <mat-form-field style="width: 100%">
-            <input matInput placeholder="Email address" [(ngModel)]="medcin.email" [formControl]="form.controls['email']" type="email">
+            <input matInput placeholder="Email address" [formControl]="form.controls['email']" type="email">
           </mat-form-field>
           <small *ngIf="form.controls['email'].hasError('required') && form.controls['email'].touched" class="mat-text-warn">You must include an email address.</small>
           <small *ngIf="form.controls['email'].errors?.email && form.controls['email'].touched" class="mat-text-warn">You must include a valid email address.</small>
@@ -38,12 +38,11 @@
         <div class="col-6"></div>
       </div>
 
-      <div fxLayout="row" class=" row justify-content-center" fxLayoutWrap="wrap">
+      <div fxLayout="row" class="row justify-content-center" fxLayoutWrap="wrap">
         <div class="mb-1 col-4">
           <mat-form-field style="width: 100%">
-            <input matInput (focus)="dt.open()" [matDatepicker]="dt" placeholder="Date de Naissance"
-             [value]="medcin.dateDeNaissance | date:'yyyy-MM-dd'"
-             [(ngModel)]="medcin.dateDeNaissance"
+            <input matInput (focus)="dt.open()" [matDatepicker]="dt"
+             placeholder="Date de Naissance"
              [formControl]="form.controls['date']">
             <mat-datepicker-toggle matSuffix [for]="dt"></mat-datepicker-toggle>
             <mat-datepicker #dt></mat-datepicker>
@@ -53,10 +52,10 @@
         <div class="col-6"></div>
       </div>
 
-      <div fxLayout="row" class=" row justify-content-center" fxLayoutWrap="wrap">
+      <div fxLayout="row" class="row justify-content-center" fxLayoutWrap="wrap">
         <div class="mb-1 col-4">
           <mat-form-field style="width: 100%">
-            <mat-select [(value)]="selected" [(ngModel)]="medcin.specialty" placeholder="Spécialité" [formControl]="form.controls['specialty']">
+            <mat-select [(value)]="selected" placeholder="Spécialité" [formControl]="form.controls['specialty']">
               <mat-option> </mat-option>
               <mat-option value="chirigien">Chirigien</mat-option>
               <mat-option value="pediatrie">Pediatrie</mat-option>
@@ -71,7 +70,7 @@
       <div class="row justify-content-center">
         <!-- <label>Gender</label> -->
         <div class="col-4">
-          <mat-radio-group [(ngModel)]="medcin.sexe" [formControl]="form.controls['gender']">
+          <mat-radio-group [formControl]="form.controls['gender']">
             <div fxLayout="row" class=" row justify-content-around">
               <div class="col-4">
                 <mat-radio-button value="male">Male</mat-radio-button>
@@ -94,7 +93,7 @@
         <div class="col-4">
           <div class="row justify-content-around">
             <div class="mb-1 col-4">
-              <button mat-raised-button color="primary" type="submit" (click)="updateMedcin()" [disabled]="!form.valid">Modifier</button>
+              <button mat-raised-button color="primary" type="submit" [disabled]="!form.valid">Modifier</button>
             </div>
             <div class="col-4">
               <button mat-raised-button color="warn" (click)="deleteMedcin()">Supprimer</button>
