--- a/starter/src/app/patient/components/bilans/bilans.component.html
+++ b/starter/src/app/patient/components/bilans/bilans.component.html
@@ -7,7 +7,7 @@
       <mat-table #table [dataSource]="dataSource">
 
         <ng-container matColumnDef="date">
-          <mat-header-cell *matHeaderCellDef> Date </mat-header-cell>
+          <mat-header-cell *matHeaderCellDef> Date Time</mat-header-cell>
           <mat-cell *matCellDef="let bilan"> {{bilan.date | date: 'yyyy-MM-dd HH:mm' }} </mat-cell>
         </ng-container>
 
@@ -53,8 +53,8 @@
   </mat-card-content> 
    <hr> 
   <mat-card-content>
-    <h6 class="mt-0 mb-1">Courbe</h6>
-      <!-- <canvas height="100" baseChart class="chart" [data]="pieChartData" [options]="pieOptions" [colors]="pieChartColors" [labels]="pieChartLabels"
-      [chartType]="pieChartType"></canvas>   -->
+    <h4 class="mt-0 mb-1">Courbe</h4>
+      <canvas height="100" baseChart class="chart" [data]="pieChartData" [options]="pieOptions" [colors]="pieChartColors" [labels]="pieChartLabels"
+      [chartType]="pieChartType"></canvas>  
   </mat-card-content>
 </mat-card>
