--- a/starter/src/app/patient/components/information/information.component.html
+++ b/starter/src/app/patient/components/information/information.component.html
@@ -9,7 +9,7 @@
     <mat-table #table [dataSource]="dataSource">
 
       <ng-container matColumnDef="date">
-        <mat-header-cell *matHeaderCellDef> Date </mat-header-cell>
+        <mat-header-cell *matHeaderCellDef> Date Time</mat-header-cell>
         <mat-cell *matCellDef="let information"> {{information.date | date: 'yyyy-MM-dd HH:mm' }} </mat-cell>
       </ng-container>
 
