--- a/starter/src/app/patient/components/bilans/bilans.component.html
+++ b/starter/src/app/patient/components/bilans/bilans.component.html
@@ -53,8 +53,14 @@
   </mat-card-content> 
    <hr> 
   <mat-card-content>
-    <h4 class="mt-0 mb-1">Courbe</h4>
-      <canvas height="100" baseChart class="chart" [data]="pieChartData" [options]="pieOptions" [colors]="pieChartColors" [labels]="pieChartLabels"
-      [chartType]="pieChartType"></canvas>  
+    <!-- <h4 class="mt-0 mb-1">Courbe</h4> -->
+      <!-- <canvas height="100" baseChart class="chart" [data]="pieChartData" [options]="pieOptions" [colors]="pieChartColors" [labels]="pieChartLabels"
+      [chartType]="pieChartType"></canvas>   -->
+      <div>
+        <ngx-charts-line-chart [view]="view" [scheme]="colorScheme" [results]="results"
+          xAxis="true" yAxis="true" roundDomains="true" legend="true" (select)="onSelect($event)">
+        </ngx-charts-line-chart>
+      </div>
+      <br><br>
   </mat-card-content>
 </mat-card>
