--- a/starter/src/app/patient/components/bilans/bilans.component.html
+++ b/starter/src/app/patient/components/bilans/bilans.component.html
@@ -57,7 +57,7 @@
       <!-- <canvas height="100" baseChart class="chart" [data]="pieChartData" [options]="pieOptions" [colors]="pieChartColors" [labels]="pieChartLabels"
       [chartType]="pieChartType"></canvas>   -->
       <div>
-        <ngx-charts-line-chart [view]="view" [scheme]="colorScheme" [results]="results"
+        <ngx-charts-line-chart [view]="view" [scheme]="colorScheme" [results]="result"
           xAxis="true" yAxis="true" roundDomains="true" legend="true" (select)="onSelect($event)">
         </ngx-charts-line-chart>
       </div>
