--- a/starter/src/app/patient/components/patient-item/patient-item.component.html
+++ b/starter/src/app/patient/components/patient-item/patient-item.component.html
@@ -29,7 +29,8 @@
               <mat-tab-group (selectedTabChange)="tabChanged($event)">
                 <mat-tab>
                   <ng-template matTabLabel>Clinique</ng-template>
-                  <app-chat [messages]="patient.cliniques" [patientId]="patientId" [index]="index"></app-chat>
+                  <!-- <app-chat [messages]="patient.cliniques" [patientId]="patientId" [index]="index"></app-chat> -->
+                  <app-chat [messages]="cliniques" [patientId]="patientId" [index]="index"></app-chat>
                 </mat-tab>
                 <mat-tab>
                   <ng-template matTabLabel>Instruction</ng-template>
@@ -56,7 +57,7 @@
             <mat-tab>
               <mat-card-content>
                 <ng-template matTabLabel>Photos</ng-template>
-                <mat-grid-list cols="3">
+                <!-- <mat-grid-list cols="3">
                   <mat-grid-tile *ngFor="let id of images" rowHeight="4:3">
                     <img src="https://source.unsplash.com/600x600?{{ id }}" alt="Card image cap" />
                     <mat-grid-tile-footer>
@@ -65,7 +66,20 @@
                       <mat-icon>favorite</mat-icon>
                     </mat-grid-tile-footer>
                   </mat-grid-tile>
+                </mat-grid-list> -->
+
+                <mat-grid-list cols="3">
+                  <mat-grid-tile *ngFor="let image of patient.uploads" rowHeight="4:3">
+                    <img src="C:/Users/Saad/Desktop/PFE/{{ image.file }}" alt="Card image cap" />
+                    <mat-grid-tile-footer>
+                      <h3 matLine>{{ image.id }}</h3>
+                      <span matLine>{{image.title }}</span>
+                      <mat-icon>favorite</mat-icon>
+                    </mat-grid-tile-footer>
+                  </mat-grid-tile>
                 </mat-grid-list>
+
+                <!-- <app-upload-form></app-upload-form> -->
               </mat-card-content>
             </mat-tab>
           </mat-tab-group>
