--- a/starter/src/assets/styles/scss/_material.variables.scss
+++ b/starter/src/assets/styles/scss/_material.variables.scss
@@ -1,6 +1,7 @@
 @import '~@angular/material/theming';
 $primary: mat-palette($mat-indigo);
 $accent:  mat-palette($mat-amber, A200, A100, A400);
+$mechat:  mat-palette($mat-blue);
 $warn: mat-palette($mat-red);
 $theme: mat-light-theme($primary, $accent, $warn);
 $background: map-get($theme, background);
