--- a/starter/src/app/patient/components/upload-form/upload-form.component.html
+++ b/starter/src/app/patient/components/upload-form/upload-form.component.html
@@ -32,7 +32,7 @@
               hidden="true"
               (change)="onFileSelected($event)"
               #fileInput>
-            <button mat-icon-button (click)="fileInput.click()">
+            <button block mat-icon-button (click)="fileInput.click()">
               <mat-icon>insert_photo</mat-icon>
             </button>
           </div>
