--- a/starter/src/app/patient/components/bilans/bilans.component.html
+++ b/starter/src/app/patient/components/bilans/bilans.component.html
@@ -54,10 +54,8 @@
    <hr> 
   <mat-card-content>
     <!-- <h4 class="mt-0 mb-1">Courbe</h4> -->
-      <!-- <canvas height="100" baseChart class="chart" [data]="pieChartData" [options]="pieOptions" [colors]="pieChartColors" [labels]="pieChartLabels"
-      [chartType]="pieChartType"></canvas>   -->
-      <div *ngIf="result" style="width: 600px; height: 400px;">
-        <ngx-charts-line-chart [view]="view" [scheme]="colorScheme" [results]="result"
+      <div *ngIf="results" style="width: 900px; height: 400px;">
+        <ngx-charts-line-chart [view]="view" [scheme]="colorScheme" [results]="results"
           xAxis="true" yAxis="true" roundDomains="true" legend="true" (select)="onSelect($event)">
         </ngx-charts-line-chart>
       </div>
